noinst_LTLIBRARIES=libinstr.la

#libinstr_la_CPPFLAGS=\
	#-I$(top_srcdir)/src/special_instruction_f/erd  			\
	#-I$(top_srcdir)/src/special_instruction_f/oed 			\
	#-I$(top_srcdir)/src/special_instruction_f/direct_integral	\
	#-I$(top_srcdir)/src/sip/
	
libinstr_la_CPPFLAGS=\
 $(PAPI_INCLUDE)\
 $(TAU_CPP)\
-I$(srcdir)/qm\
-I$(srcdir)/qm/erd\
-I$(srcdir)/qm/oed\
-I$(srcdir)/qm/direct_integral\
-I${top_srcdir}/src/sip\
-I${top_srcdir}/src/sip/tensor_algebra\
-I${top_srcdir}/src/sip/core\
-I${top_srcdir}/src/sip/setup\
-I${top_srcdir}/src/sip/worker\
-I${top_srcdir}/src/sip/static_data\
-I${top_srcdir}/src/sip/dynamic_data\
-I${top_srcdir}/src/sip/mpi\
-I${top_srcdir}/src/sip/cuda


# Quantum Methods
QM_SOURCE_FILES=\
./qm/aoladder_contraction.F\
./qm/compute_nn_repulsion.F\
./qm/int_gen_parms.hf\
./qm/sip_interface.hf\
./qm/compute_aabb_batch.F\
./qm/dadd.f\
./qm/fill_block_sequential.f\
./qm/fill_block_cyclic.f\
./qm/eig_sr_inv.F\
./qm/return_h1.F\
./qm/return_sval.F\
./qm/check_dconf.F\
./qm/compute_diis.F\
./qm/return_ovl.F\
./qm/scf_atom.F\
./qm/return_h1frag.F\
./qm/compute_int_scratchmem.F\
./qm/imemory.h\
./qm/energy_denominator_rhf.F\
./qm/return_diagonal.F\
./qm/eig.F\
./qm/diag.F\
./qm/eigen_calc.F\
./qm/form_R.F \
./qm/set_flags2.f\
./qm/get_and_print_int_array_dummy.F\
./qm/get_and_print_scalar_array_dummy.F\
./qm/get_scratch_array_dummy.F\
./qm/compute_ubatch1.F\
./qm/compute_ubatch2.F\
./qm/compute_ubatch3.F\
./qm/compute_ubatch4.F\
./qm/compute_ubatch6.F\
./qm/compute_ubatch7.F\
./qm/compute_ubatch8.F\
./qm/compute_uintegrals1.F\
./qm/compute_uintegrals2.F\
./qm/compute_uintegrals3.F\
./qm/compute_uintegrals4.F\
./qm/compute_uintegrals6.F\
./qm/compute_uintegrals7.F\
./qm/compute_uintegrals8.F\
./qm/uintegrals.F\
./qm/scf_frag.F\
./qm/set_frag.F\
./qm/frag_index_range.F\
./qm/compute_integral_batch.F\
./qm/instructions_for_testing.f\
./qm/direct_integral/pack_coeffs.f\
./qm/direct_integral/lookup_shell.f\
./qm/direct_integral/pack_coeffs_oed.f\
./qm/direct_integral/comp_return_h1.F\
./qm/direct_integral/comp_return_ovl.F\
./qm/direct_integral/comp_return_frag_h0.F\
./qm/erd_scratch_mem_calc.F\
./qm/do_rhf_den4.F\
./qm/do_rhf_den2.F\
./qm/stripi.F\
./qm/set_ijk_aaa.F\
./qm/set_ijk_aab.F\
./qm/direct_integral/move_integrals.f\
./qm/compute_aabb_integrals.F\
./qm/erd/erd__ctr_tu_expand.f\
./qm/erd/erd__ctr_4index_reorder.f\
./qm/erd/erd__spherical_transform.f\
./qm/erd/erd__rys_2_roots_weights.f\
./qm/erd/erd__memory_eri_derv_batch.f\
./qm/erd/erd__derv_int2d_to_abc0.f\
./qm/erd/erd__ssss_pcgto_block.f\
./qm/erd/erd__memory_hrr_correction.f\
./qm/erd/erd__derv_def_blocks.f\
./qm/erd/erd__1111_def_blocks.f\
./qm/erd/erd__ctr_1st_half.f\
./qm/erd/erd__sspp_pcgto_block.f\
./qm/erd/erd__memory_derv_csgto.f\
./qm/erd/erd__rys_3_roots_weights.f\
./qm/erd/erd__2d_atom_pq_integrals.f\
./qm/erd/erd__2d_derv_pcd_integrals.f\
./qm/erd/erd__derv_int2d_to_ab00.f\
./qm/erd/erd__e0f0_pcgto_block.f\
./qm/erd/erd__rys_x_roots_weights.f\
./qm/erd/erd__atom_int2d_to_e000.f\
./qm/erd/erd__2d_derv_abcd_integrals.f\
./qm/erd/erd__set_derv_sequence.f\
./qm/erd/erd__xyz_to_ry_matrix.f\
./qm/erd/erd__ctr_rs_expand.f\
./qm/erd/erd__prepare_ctr.f\
./qm/erd/erd__jacobi.inc\
./qm/erd/erd__sppp_pcgto_block.f\
./qm/erd/erd__2d_coefficients.f\
./qm/erd/erd__memory_csgto.f\
./qm/erd/erd__normalize_cartesian.f\
./qm/erd/erd__set_derv_abcd.f\
./qm/erd/erd__derv_csgto.f\
./qm/erd/erd__gener_eri_derv_batch.f\
./qm/erd/erd__pppp_pcgto_block.f\
./qm/erd/erd__derv_int2d_to_abcd.f\
./qm/erd/erd__print_batch.f\
./qm/erd/erd__2d_abcd_integrals.f\
./qm/erd/erd__atom_int2d_to_e0f0.f\
./qm/erd/erd__rys_1_roots_weights.f\
./qm/erd/erd__ctr_2nd_half_update.f\
./qm/erd/erd__hrr_matrix.f\
./qm/erd/erd__int2d_to_e000.f\
./qm/erd/erd__memory_1111_csgto.f\
./qm/erd/erd__2d_pcd_integrals.f\
./qm/erd/erd__e0f0_def_blocks.f\
./qm/erd/erd__2d_pq_integrals.f\
./qm/erd/erd__derv_int2d_to_e000.f\
./qm/erd/erd__sssp_pcgto_block.f\
./qm/erd/erd__ftable.inc\
./qm/erd/erd__cartesian_norms.f\
./qm/erd/erd__hrr_transform.f\
./qm/erd/erd__gener_eri_batch.f\
./qm/erd/erd__derv_int2d_to_a000.f\
./qm/erd/erd__ctr_4index_block.f\
./qm/erd/erd__ctr_2nd_half_new.f\
./qm/erd/erd__hrr_step.f\
./qm/erd/erd__transpose_batch.f\
./qm/erd/erd__tuning.inc\
./qm/erd/erd__derv_int2d_to_e0cd.f\
./qm/erd/erd__int2d_to_e0f0.f\
./qm/erd/erd__map_ijkl_to_ikjl.f\
./qm/erd/erd__derv_pcgto_block.f\
./qm/erd/erd__rys_5_roots_weights.f\
./qm/erd/erd__memory_eri_batch.f\
./qm/erd/erd__derv_int2d_to_0000.f\
./qm/erd/erd__csgto.f\
./qm/erd/erd__set_ij_kl_pairs.f\
./qm/erd/erd__derv_int2d_to_e0c0.f\
./qm/erd/erd__xyz_to_ry_abcd.f\
./qm/erd/erd__dsqmin_line_segments.f\
./qm/erd/erd__rys_4_roots_weights.f\
./qm/erd/erd__rys_roots_weights.f\
./qm/erd/erd__2d_atom_coefficients.f\
./qm/erd/erd__set_abcd.f\
./qm/erd/erd__move_ry.f\
./qm/erd/erd__1111_csgto.f\
./qm/oed/oed__cartesian_norms.f\
./qm/oed/oed__ctr_2index_block.f\
./qm/oed/oed__ctr_2index_reorder.f\
./qm/oed/oed__ctr_3index_block.f\
./qm/oed/oed__ctr_3index_reorder.f\
./qm/oed/oed__ctr_pair_new.f\
./qm/oed/oed__ctr_pair_update.f\
./qm/oed/oed__ctr_rs_expand.f\
./qm/oed/oed__ctr_single_new.f\
./qm/oed/oed__ctr_single_update.f\
./qm/oed/oed__dsqmin_line_segments.f\
./qm/oed/oed__ftable.inc\
./qm/oed/oed__gener_kin_batch.f\
./qm/oed/oed__gener_kin_derv_batch.f\
./qm/oed/oed__gener_nai_batch.f\
./qm/oed/oed__gener_nai_derv_batch.f\
./qm/oed/oed__gener_ovl3c_batch.f\
./qm/oed/oed__gener_ovl_batch.f\
./qm/oed/oed__gener_ovl_derv_batch.f\
./qm/oed/oed__gener_xyz_batch.f\
./qm/oed/oed__gener_xyz_derv_batch.f\
./qm/oed/oed__hrr_matrix.f\
./qm/oed/oed__hrr_step.f\
./qm/oed/oed__hrr_transform.f\
./qm/oed/oed__jacobi.inc\
./qm/oed/oed__kin_1d_derv_integrals.f\
./qm/oed/oed__kin_1d_integrals.f\
./qm/oed/oed__kin_ab_def_blocks.f\
./qm/oed/oed__kin_ab_pcgto_block.f\
./qm/oed/oed__kin_csgto.f\
./qm/oed/oed__kin_derv_csgto.f\
./qm/oed/oed__kin_derv_def_blocks.f\
./qm/oed/oed__kin_derv_int1d_to_00.f\
./qm/oed/oed__kin_derv_int1d_to_a0.f\
./qm/oed/oed__kin_derv_int1d_to_ab.f\
./qm/oed/oed__kin_derv_pcgto_block.f\
./qm/oed/oed__kin_int1d_to_a0.f\
./qm/oed/oed__kin_int1d_to_ab.f\
./qm/oed/oed__kin_prepare_ctr.f\
./qm/oed/oed__kin_set_ab.f\
./qm/oed/oed__kin_set_derv_ab.f\
./qm/oed/oed__kin_set_derv_sequence.f\
./qm/oed/oed__kin_set_ij_pairs.f\
./qm/oed/oed__map_ijkl_to_ikjl.f\
./qm/oed/oed__memory_kin_batch.f\
./qm/oed/oed__memory_kin_csgto.f\
./qm/oed/oed__memory_kin_derv_batch.f\
./qm/oed/oed__memory_kin_derv_csgto.f\
./qm/oed/oed__memory_nai_batch.f\
./qm/oed/oed__memory_nai_csgto.f\
./qm/oed/oed__memory_nai_derv_batch.f\
./qm/oed/oed__memory_nai_derv_csgto.f\
./qm/oed/oed__memory_ovl3c_batch.f\
./qm/oed/oed__memory_ovl3c_csgto.f\
./qm/oed/oed__memory_ovl_batch.f\
./qm/oed/oed__memory_ovl_csgto.f\
./qm/oed/oed__memory_ovl_derv_batch.f\
./qm/oed/oed__memory_ovl_derv_csgto.f\
./qm/oed/oed__move_ry.f\
./qm/oed/oed__nai_1d_ab_integrals.f\
./qm/oed/oed__nai_1d_cenderv_integrals.f\
./qm/oed/oed__nai_1d_coefficients.f\
./qm/oed/oed__nai_1d_p_integrals.f\
./qm/oed/oed__nai_1d_shderv_integrals.f\
./qm/oed/oed__nai_csgto.f\
./qm/oed/oed__nai_derv_2cen_pcgto_block.f\
./qm/oed/oed__nai_derv_3cen_pcgto_block.f\
./qm/oed/oed__nai_derv_csgto.f\
./qm/oed/oed__nai_derv_def_blocks.f\
./qm/oed/oed__nai_derv_int1d_to_00.f\
./qm/oed/oed__nai_derv_int1d_to_a0.f\
./qm/oed/oed__nai_derv_int1d_to_ab.f\
./qm/oed/oed__nai_e0_def_blocks.f\
./qm/oed/oed__nai_e0_pcgto_block.f\
./qm/oed/oed__nai_int1d_to_e0.f\
./qm/oed/oed__nai_prepare_ctr.F\
./qm/oed/oed__nai_set_ab.f\
./qm/oed/oed__nai_set_derv_ab.f\
./qm/oed/oed__nai_set_derv_ijc_triples.f\
./qm/oed/oed__nai_set_ijc_triples.f\
./qm/oed/oed__normalize_cartesian.f\
./qm/oed/oed__ovl_1d_ab_integrals.f\
./qm/oed/oed__ovl_1d_derv_integrals.f\
./qm/oed/oed__ovl_1d_integrals.f\
./qm/oed/oed__ovl3c_csgto.f\
./qm/oed/oed__ovl3c_f00_def_blocks.f\
./qm/oed/oed__ovl3c_f00_pcgto_block.f\
./qm/oed/oed__ovl3c_prepare_ctr.F\
./qm/oed/oed__ovl3c_set_abc.f\
./qm/oed/oed__ovl3c_set_ijk.f\
./qm/oed/oed__ovl3c_set_ijk_triples.f\
./qm/oed/oed__ovl_csgto.f\
./qm/oed/oed__ovl_derv_csgto.f\
./qm/oed/oed__ovl_derv_def_blocks.f\
./qm/oed/oed__ovl_derv_int1d_to_00.f\
./qm/oed/oed__ovl_derv_int1d_to_a0.f\
./qm/oed/oed__ovl_derv_int1d_to_ab.f\
./qm/oed/oed__ovl_derv_pcgto_block.f\
./qm/oed/oed__ovl_e0_def_blocks.f\
./qm/oed/oed__ovl_e0_pcgto_block.f\
./qm/oed/oed__ovl_int1d_to_e0.f\
./qm/oed/oed__ovl_prepare_ctr.F\
./qm/oed/oed__ovl_set_ab.f\
./qm/oed/oed__ovl_set_derv_ab.f\
./qm/oed/oed__ovl_set_derv_sequence.f\
./qm/oed/oed__ovl_set_ij_pairs.f\
./qm/oed/oed__print_2ind_batch.f\
./qm/oed/oed__print_batch.f\
./qm/oed/oed__rys_1_roots_weights.f\
./qm/oed/oed__rys_2_roots_weights.f\
./qm/oed/oed__rys_3_roots_weights.f\
./qm/oed/oed__rys_4_roots_weights.f\
./qm/oed/oed__rys_5_roots_weights.f\
./qm/oed/oed__rys_roots_weights.f\
./qm/oed/oed__rys_x_roots_weights.f\
./qm/oed/oed__spherical_transform.f\
./qm/oed/oed__transpose_batch.f\
./qm/oed/oed__tuning.inc\
./qm/oed/oed__xyz_1d_ab_integrals.f\
./qm/oed/oed__xyz_1d_derv_integrals.f\
./qm/oed/oed__xyz_1d_integrals.f\
./qm/oed/oed__xyz_1d_mom_ab_integrals.f\
./qm/oed/oed__xyz_1d_ovl_mom_ab_integrals.f\
./qm/oed/oed__xyz_csgto.f\
./qm/oed/oed__xyz_derv_csgto.f\
./qm/oed/oed__xyz_derv_def_blocks.f\
./qm/oed/oed__xyz_derv_int1d_to_00.f\
./qm/oed/oed__xyz_derv_int1d_to_a0.f\
./qm/oed/oed__xyz_derv_int1d_to_ab.f\
./qm/oed/oed__xyz_derv_pcgto_block.f\
./qm/oed/oed__xyz_e0_def_blocks.f\
./qm/oed/oed__xyz_e0_pcgto_block.f\
./qm/oed/oed__xyz_init_00_ints.f\
./qm/oed/oed__xyz_init_ovrlp.f\
./qm/oed/oed__xyz_int1d_to_e0.f\
./qm/oed/oed__xyz_mom_integrals.f\
./qm/oed/oed__xyz_set_ab.f\
./qm/oed/oed__xyz_set_derv_ab.f\
./qm/oed/oed__xyz_set_derv_sequence.f\
./qm/oed/oed__xyz_to_ry_abc.f\
./qm/oed/oed__xyz_to_ry_ab.f\
./qm/oed/oed__xyz_to_ry_matrix.f

# General Super Instructions
GENERAL_SOURCE_FILES=\
./general/list_block_map.cpp\
./general/print_block.cpp\
./general/print_static_array.cpp\
./general/get_my_rank.cpp\
./general/swap_blocks.cpp\
./general/disable_debug_print.cpp\
./general/enable_debug_print.cpp\
./general/abort_job.F

# Super instructions only for Test
TEST_SOURCE_FILES=\
./test/test_increment_counter.cpp

libinstr_la_SOURCES=\
special_instructions.h\
special_instructions.cpp\
$(QM_SOURCE_FILES)\
$(GENERAL_SOURCE_FILES)\
$(TEST_SOURCE_FILES)


# We could add in our own lapack library if there wasn't a vendor supplied one on the machine.
#if ! LAPACK_PRESENT
#libinstr_la_SOURCES += ./lapack/dsyev.c
#endif
	


